sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Payment__c/Vendor_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice Payment</label>
    <nameField>
        <displayFormat>VIP-{0000000}</displayFormat>
        <label>Vendor Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>