sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Payment__c/fields/Company_Formula__c.field-meta.xml
<CustomField>
    <fullName>Company_Formula__c</fullName>
    <formula>CASE(Company__r.Name ,
&quot;Sanergy Limited&quot;, &quot;Sanergy Ltd&quot;,
&quot;Sanergy, Inc. (FP)&quot;, &quot;Sanergy Inc (FP)&quot;,
&quot;Sanergy, Inc. (NP)&quot;, &quot;Sanergy Inc (NP)&quot;,
&quot;Fresh Life Initiative Limited&quot;, &quot;Fresh Life Initiative Ltd&quot;,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Formula</label>
    <type>Text</type>
</CustomField>