sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Payment__c/fields/EPR__c.field-meta.xml
<CustomField>
    <fullName>EPR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EPR</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipLabel>Vendor Invoice Payments</relationshipLabel>
    <relationshipName>Vendor_Invoice_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>