sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Payment__c/fields/VI_Pmt_Approved__c.field-meta.xml
<CustomField>
    <fullName>VI_Pmt_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set as approved only if generated directly from the VI or created by an approved user from the Manual VI Payment Sanergy Settings</description>
    <inlineHelpText>Set as approved only if generated directly from the VI or created by an approved user from the Manual VI Payment Sanergy Settings</inlineHelpText>
    <label>VI Pmt Approved</label>
    <type>Checkbox</type>
</CustomField>