sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Payment__c/validationRules/VIPAndEPRCompanyValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>VIPAndEPRCompanyValidation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(EPR__r.Company__c)  &lt;&gt;   Company_Formula__c</errorConditionFormula>
    <errorMessage>The Company on the Vendor Invoice Payment and EPR do not match. Please review.</errorMessage>
</ValidationRule>